# chat-robot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-train.txt  start-api.cmd  start-inference.cmd
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: admin.py  chat.py  health.py  knowledge.py  traces.py
app/core/: config.py  logging.py
app/inference/: __init__.py  backends.py  main.py
app/persistence/: __init__.py  knowledge_ingest_store.py  models.py  trace_store.py
app/schemas/: __init__.py  admin.py  chat.py  health.py  inference.py  knowledge.py  traces.py
app/services/: bm25_index_store.py  chat_pipeline.py  container.py  document_parsing_service.py  embedding_service.py  generator_service.py  infra_service.py  intent_service.py  knowledge_base.py  knowledge_ingest_service.py  planner_service.py  rag_lab_service.py  rag_snapshot_service.py  retriever_service.py  tool_runtime.py  trace_service.py
app/static/: admin-compare.html  admin-dashboard.html  admin-performance.html  admin-rag.html  admin-traces.html  chat.html  knowledge.html  traces.html
app/static/css/: app.css
app/static/js/: admin-common.js  admin-compare.js  admin-dashboard.js  admin-performance.js  admin-rag.js  admin-traces.js  chat-console.js  chat-page.js  knowledge-page.js  traces-page.js
app/web/: __init__.py  routes.py
config/: app.toml  intents.toml  models.toml  rag.toml  rag_eval_cases.plan_execute.json
scripts/: test_intent_regression.ps1  test_intent_regression.py
tests/: test_chat_pipeline_react_mode.py  test_chat_request_execution_strategy.py  test_domain_routing.py  test_inference_routing.py  test_plan_task_graph.py  test_planner_service.py  test_rag_eval_case_preset.py  test_task_aggregation.py  test_tool_runtime.py
